--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">I</h2>
+    	<h2 style="color:#8FAD00;">J</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">S</h2>
+    	<h2 style="color:#8377E4;">E</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">H</h2>
+    	<h2 style="color:#99C96A;">V</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">H</h2>
+    	<h2 style="color:#20CFB4;">I</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -150,7 +150,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Ishh</p>
+				<p>a very happy birthday Jeevi</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
